[package]
name = "DataBrokerClient"
version = "0.1.1"
edition = "2024"

[lib]
name = "data_broker_client"
crate-type = ["cdylib"]

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }
